--- a/index.html
+++ b/index.html
@@ -16,6 +16,68 @@
 </head>
 
 <body class="main-page">
+<!-- MOBILE-->
+
+<div class="js-menu-container">
+    <button class="menu-toggle js-close-menu">&times;</button>
+    <nav>
+        <ul class="mobile-menu-navigation">
+            <li>
+                <a class="mobile-navbar-list-item" href="index.html" rel="noopener noreferrer">Studio</a>
+            </li>
+            <li>
+                <a class="mobile-navbar-list-item" href="portfolio.html" target="portofolio.html"
+                    rel="noopener nofollow noreferrer">Portofolio</a>
+            </li>
+            <li>
+                <a class="mobile-navbar-list-item" href="contacts.html" target="_blank"
+                    rel="noopener nofollow noreferrer">Contacts</a>
+            </li>
+        </ul>
+    </nav>
+
+    <ul class="mobile-menu-contact">
+        <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li>
+            <a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a>
+        </li>
+    </ul>
+
+    <ul class="mobile-social-links-list">
+        <li>
+            <a href="https://www.instagram.com/" target="_blank" class="social-icon" aria-label="instagram-link">
+                <svg>
+                    <use href="./icons/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+            </a>
+        </li>
+        <li>
+            <a href="https://www.twitter.com/" target="_blank" class="social-icon" aria-label="twitter-link">
+                <svg>
+                    <use href="./icons/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+            </a>
+        </li>
+        <li>
+            <a href="https://www.facebook.com/" target="_blank" class="social-icon" aria-label="facebook-link">
+                <svg>
+                    <use href="./icons/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+            </a>
+        </li>
+        <li>
+            <a href="https://www.linkedin.com/" target="_blank" class="social-icon" aria-label="linkedin-link">
+                <svg>
+                    <use href="./icons/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+            </a>
+        </li>
+    </ul>
+</div>
+
+
     <!--Navbar section-->
 
     <header class="global-header">
@@ -483,6 +545,7 @@
         feather.replace();
         </script>
 <script src="./javascript/modal.js"></script>
+<script src="./javascript/mobile-menu.js"></script>
 </body>
 
 </html>
